# rust-market-data

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md
.github/workflows/: ci.yml  live-acceptance.yml
crates/acceptance/: Cargo.toml
crates/acceptance/src/: lib.rs  main.rs
crates/aster/: Cargo.toml  README.md
crates/aster/examples/: aster_public_ws_matrix.rs  public_rest_matrix.rs  public_smoke.rs  public_universe_coverage_report.rs
crates/aster/src/: lib.rs
crates/binance/: Cargo.toml  README.md
crates/bitget/: Cargo.toml  README.md
crates/bitunix/: Cargo.toml
crates/bybit/: Cargo.toml  README.md
crates/coinbase/: Cargo.toml
crates/common/: Cargo.toml
crates/crypto_com/: Cargo.toml
crates/handoff_consumer/: Cargo.toml
crates/handoff_consumer/src/: main.rs
crates/mexc/: COMPLETION_AUDIT.md  Cargo.toml  README.md  build.rs
crates/mexc/docs/adr/: 0001-separate-tradable-universe-from-metadata-only-state.md
crates/mexc/examples/: futures_contract_change_feed.rs  futures_contract_channel_report.rs  futures_contract_channels_smoke.rs  futures_contract_observer_report.rs  futures_contract_signal_feed.rs  futures_deals_raw_smoke.rs  futures_depth_modes_smoke.rs  futures_funding_rate_smoke.rs  futures_order_book_smoke.rs  public_all_symbols_bootstrap.rs  public_change_only_watch.rs  public_contract_refresh_policy_smoke.rs  public_contract_refresh_smoke.rs  public_contract_targeted_gap_smoke.rs  public_contract_targeted_refresh_smoke.rs  public_deep_handoff.rs  public_deep_snapshot.rs  public_forced_reconnect_report.rs  public_futures_kline_window_smoke.rs  public_managed_ready_smoke.rs  public_managed_rebuild_smoke.rs  public_managed_self_heal_smoke.rs  public_metadata_refresh_smoke.rs  public_rest_matrix.rs  public_runtime_watch.rs  public_session_rotation_smoke.rs  public_smoke.rs  public_snapshot.rs  public_soak_report.rs  public_startup_report.rs  public_state_change_feed.rs  public_state_handoff.rs  public_state_handoff_report.rs  public_wait_for_kind.rs  public_ws_matrix.rs  spot_block_report.rs  spot_historical_market_data_smoke.rs  spot_order_book_smoke.rs
crates/mexc/proto/: PublicAggreBookTickerV3Api.proto  PublicAggreDealsV3Api.proto  PublicAggreDepthsV3Api.proto  PublicBookTickerBatchV3Api.proto  PublicBookTickerV3Api.proto  PublicIncreaseDepthsBatchV3Api.proto  PublicIncreaseDepthsV3Api.proto  PublicLimitDepthsV3Api.proto  PublicMiniTickerV3Api.proto  PublicMiniTickersV3Api.proto  PublicSpotKlineV3Api.proto  PushDataV3ApiWrapper.proto
crates/mexc/src/: coverage.rs  futures_order_book.rs  futures_ws.rs  lib.rs  model.rs  public.rs  public_state.rs  rest.rs  spot_order_book.rs  spot_ws.rs
docs/: connector-factory.md  readiness-state-model.md
scripts/: list_exchanges.sh  mexc_watchers_status.sh  new_exchange.sh  start_mexc_watchers.sh
(+38 files in other folders)
