[workspace]
members = [
    "crates/common",
    "crates/acceptance",
    "crates/handoff_consumer",
    "crates/binance",
    "crates/coinbase",
    "crates/crypto_com",
    "crates/deribit",
    "crates/bybit",
    "crates/okx",
    "crates/bitget",
    "crates/hyperliquid",
    "crates/kraken",
    "crates/kucoin",
    "crates/gateio",
    "crates/mexc",
    "crates/bitunix",
    "crates/aster",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
