[package]
name = "acceptance"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
aster = { path = "../aster" }
binance = { path = "../binance" }
bybit = { path = "../bybit" }
common = { path = "../common" }
mexc = { path = "../mexc" }
okx = { path = "../okx" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
