[package]
name = "aster"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
common = { path = "../common" }
futures.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["gzip", "http2", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
