[package]
name = "handoff-consumer"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
aster = { path = "../aster" }
binance = { path = "../binance" }
bitget = { path = "../bitget" }
bybit = { path = "../bybit" }
common = { path = "../common" }
mexc = { path = "../mexc" }
okx = { path = "../okx" }
serde.workspace = true
serde_json.workspace = true
