[package]
name = "mexc"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
common = { path = "../common" }
flate2 = "1.0"
futures.workspace = true
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["gzip", "http2", "json", "rustls-tls"] }
rust_decimal = { version = "1", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
tokio.workspace = true
tracing.workspace = true

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"
